--- a/index.html
+++ b/index.html
@@ -8,33 +8,53 @@
     /* General Styling */
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      margin: 0;
+      padding: 0;
       text-align: center;
+      background: url('https://github.com/susmithajames/Tools/blob/main/Christmas-Gift-PNG-Image-Background.png') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+      box-sizing: border-box;
+    }
+
+    h1 {
+      font-size: 3em;
+      text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
+      margin-top: 20px;
+    }
+
+    label, select, button {
+      font-size: 18px;
+      padding: 10px 20px;
+      margin: 10px;
+      border-radius: 8px;
+      border: none;
+    }
+
+    label {
+      color: #ffeb3b;
     }
 
     select, button {
-      padding: 10px 20px;
-      margin: 10px;
-      font-size: 16px;
-      cursor: pointer;
+      background-color: rgba(255, 255, 255, 0.7);
+      color: #333;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
-    /* Style for the reset button */
-    #resetButton {
-      position: fixed;
-      bottom: 10px;
-      right: 10px;
+    button {
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    button:hover {
       background-color: #f44336;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      padding: 10px 15px;
-      cursor: pointer;
-      display: none; /* Hidden by default */
     }
 
-    #resetButton:hover {
-      background-color: #d32f2f;
+    .result {
+      font-size: 1.5em;
+      margin-top: 20px;
+      font-weight: bold;
+      text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -144,26 +164,6 @@
         });
     }
 
-    // Reset all data
-    function resetAll() {
-      participantsWhoHavePicked.clear();
-      pickedParticipants.clear();
-      document.getElementById("result").textContent = "Reset complete.";
-      populateDropdown(); // Reset dropdown
-    }
-
-    // Show reset button only if Susmitha is selected
-    function checkResetVisibility() {
-      const resetButton = document.getElementById("resetButton");
-      const selectedParticipant = document.getElementById("participantSelect").value;
-
-      if (selectedParticipant === "Susmitha") {
-        resetButton.style.display = "block";
-      } else {
-        resetButton.style.display = "none";
-      }
-    }
-
     // Initial UI rendering
     document.addEventListener("DOMContentLoaded", () => {
       populateDropdown();
@@ -175,12 +175,10 @@
 
   <!-- Dropdown to select the name -->
   <label for="participantSelect">Choose Your Name:</label>
-  <select id="participantSelect" onchange="checkResetVisibility()"></select>
+  <select id="participantSelect"></select>
   <button onclick="makePick()">Pick Random</button>
 
   <div class="result" id="result"></div>
 
-  <!-- Reset button shown only for Susmitha -->
-  <button id="resetButton" onclick="resetAll()">Reset</button>
 </body>
 </html>
