--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       text-align: center;
-      background: url('/mnt/data/image.png') no-repeat center center fixed;
+      background: url('') no-repeat center center fixed;
       background-size: cover;
       color: white;
       box-sizing: border-box;
