--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       text-align: center;
       background: url('') no-repeat center center fixed;
       background-size: cover;
-      color: white;
+      color: beige;
       box-sizing: border-box;
     }
 
