--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       text-align: center;
-      background-color: beige; /* Set background to beige */
+      background-color: green; /* Set background to beige */
       color: white;
       box-sizing: border-box;
     }
