--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
     let participantsWhoHavePicked = new Set();
     let pickedParticipants = new Set();
 
+    // Load the participants who have picked from localStorage
+    function loadPickedParticipants() {
+      const savedPicked = localStorage.getItem("pickedParticipants");
+      if (savedPicked) {
+        participantsWhoHavePicked = new Set(JSON.parse(savedPicked));
+      }
+    }
+
+    // Save the participants who have picked to localStorage
+    function savePickedParticipants() {
+      localStorage.setItem("pickedParticipants", JSON.stringify([...participantsWhoHavePicked]));
+    }
+
     // Populate the dropdown menu dynamically
     function populateDropdown() {
       const dropdown = document.getElementById("participantSelect");
@@ -98,6 +111,9 @@
         const option = document.createElement("option");
         option.value = name;
         option.textContent = name;
+        if (participantsWhoHavePicked.has(name)) {
+          option.disabled = true; // Disable the participant if they have already picked
+        }
         dropdown.appendChild(option);
       });
     }
@@ -134,6 +150,9 @@
 
       document.getElementById("result").textContent = `${selectedParticipant} picked: ${randomChoice}`;
       disableParticipant(selectedParticipant);
+
+      // Save updated state to localStorage
+      savePickedParticipants();
 
       // Send the result via EmailJS
       sendEmail(selectedParticipant, randomChoice);
@@ -172,6 +191,7 @@
     function resetApp() {
       participantsWhoHavePicked.clear();
       pickedParticipants.clear();
+      localStorage.removeItem("pickedParticipants"); // Clear the saved state from localStorage
       populateDropdown();  // Re-populate the dropdown with all names
       document.getElementById("result").textContent = '';  // Clear the result message
     }
@@ -181,7 +201,8 @@
 
     // Initial UI rendering
     document.addEventListener("DOMContentLoaded", () => {
-      populateDropdown();
+      loadPickedParticipants(); // Load the picked participants on page load
+      populateDropdown(); // Populate the dropdown after loading the state
     });
   </script>
 </head>
