--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Who's My Friend?</title>
   <style>
-    /* General Styling */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       text-align: center;
-      background-color: green; /* Set background color to green */
+      background-color: green;
       color: white;
       box-sizing: border-box;
     }
@@ -56,17 +55,29 @@
       text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
     }
 
-    /* Hide Reset Button */
     #resetButton {
-      display: none; /* Hides the reset button completely */
+      display: none;
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-database.js"></script>
   <script>
-    // Initialize EmailJS with your user ID
-    (function() {
-      emailjs.init("NtMB0PGkMJwfrxxyu"); // Replace with your EmailJS user ID
-    })();
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID",
+      measurementId: "YOUR_MEASUREMENT_ID"
+    };
+
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const database = firebase.database(app);
 
     const initialParticipants = [
       "Seena", "Alias", "William", "Bini", "Dennis",
@@ -89,20 +100,25 @@
     let participantsWhoHavePicked = new Set();
     let pickedParticipants = new Set();
 
-    // Load the participants who have picked from localStorage
-    function loadPickedParticipants() {
-      const savedPicked = localStorage.getItem("pickedParticipants");
-      if (savedPicked) {
-        participantsWhoHavePicked = new Set(JSON.parse(savedPicked));
-      }
+    // Load picks from Firebase
+    function loadPicksFromFirebase() {
+      const picksRef = database.ref('picks');
+      picksRef.once('value', (snapshot) => {
+        const picksData = snapshot.val();
+        if (picksData) {
+          participantsWhoHavePicked = new Set(Object.keys(picksData));
+        }
+        populateDropdown();
+      });
     }
 
-    // Save the participants who have picked to localStorage
-    function savePickedParticipants() {
-      localStorage.setItem("pickedParticipants", JSON.stringify([...participantsWhoHavePicked]));
+    // Save pick to Firebase
+    function savePickToFirebase(picker, picked) {
+      const picksRef = database.ref('picks');
+      picksRef.child(picker).set(picked);
     }
 
-    // Populate the dropdown menu dynamically
+    // Populate the dropdown menu
     function populateDropdown() {
       const dropdown = document.getElementById("participantSelect");
       dropdown.innerHTML = "<option value='' disabled selected>Select your name</option>";
@@ -112,13 +128,13 @@
         option.value = name;
         option.textContent = name;
         if (participantsWhoHavePicked.has(name)) {
-          option.disabled = true; // Disable the participant if they have already picked
+          option.disabled = true; // Disable participants who have picked
         }
         dropdown.appendChild(option);
       });
     }
 
-    // Randomly select a valid choice for a participant
+    // Handle the pick action
     function makePick() {
       const selectedParticipant = document.getElementById("participantSelect").value;
 
@@ -151,8 +167,8 @@
       document.getElementById("result").textContent = `${selectedParticipant} picked: ${randomChoice}`;
       disableParticipant(selectedParticipant);
 
-      // Save updated state to localStorage
-      savePickedParticipants();
+      // Save pick to Firebase
+      savePickToFirebase(selectedParticipant, randomChoice);
 
       // Send the result via EmailJS
       sendEmail(selectedParticipant, randomChoice);
@@ -191,7 +207,8 @@
     function resetApp() {
       participantsWhoHavePicked.clear();
       pickedParticipants.clear();
-      localStorage.removeItem("pickedParticipants"); // Clear the saved state from localStorage
+      const picksRef = database.ref('picks');
+      picksRef.remove(); // Remove picks from Firebase
       populateDropdown();  // Re-populate the dropdown with all names
       document.getElementById("result").textContent = '';  // Clear the result message
     }
@@ -201,22 +218,19 @@
 
     // Initial UI rendering
     document.addEventListener("DOMContentLoaded", () => {
-      loadPickedParticipants(); // Load the picked participants on page load
-      populateDropdown(); // Populate the dropdown after loading the state
+      loadPicksFromFirebase(); // Load the picks from Firebase
     });
   </script>
 </head>
 <body>
   <h1>Who's My Friend?</h1>
 
-  <!-- Dropdown to select the name -->
   <label for="participantSelect">Choose Your Name:</label>
   <select id="participantSelect"></select>
   <button onclick="makePick()">Pick Random</button>
 
   <div class="result" id="result"></div>
 
-  <!-- Reset Button (Hidden) -->
   <button id="resetButton" onclick="resetApp()">Reset</button>
 
 </body>
