--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
   <script>
     // Firebase configuration
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID",
-      measurementId: "YOUR_MEASUREMENT_ID"
+      apiKey: "AIzaSyCSMw-S8pmFYyIA3hAZuQm_QIBSMm7BkLk",
+      authDomain: "friend-226eb.firebaseapp.com",
+      databaseURL: "https://friend-226eb.firebaseio.com",
+      projectId: "friend-226eb",
+      storageBucket: "friend-226eb.appspot.com",
+      messagingSenderId: "815245344615",
+      appId: "1:815245344615:web:3fe76fc2276b6b4a8fb9c2",
+      measurementId: "G-TWMPYZSRPX"
     };
 
     // Initialize Firebase
